add new website from server na

--- a/xem-phim-moi/du-an-mat-tham-hoa-tren-cau/index.html
+++ b/xem-phim-moi/du-an-mat-tham-hoa-tren-cau/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1779,18 +1779,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-poet" title="The Poet">
+          <a class="list-top-movie-link" href="/phim-moi/ikiru" title="Ikiru">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-poet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ikiru-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Poet
+             Ikiru
             </span>
             <span class="list-top-movie-item-en">
-             The Poet
+             Ikiru
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tan-so" title="Tần Số">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-so-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tần Số
+            </span>
+            <span class="list-top-movie-item-en">
+             Frequency
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/diep-huyet-song-hung" title="Điệp huyết song hùng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-huyet-song-hung-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Điệp huyết song hùng
+            </span>
+            <span class="list-top-movie-item-en">
+             The Killer
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hac-kim-co-dien" title="Hắc Kim Cổ Điện">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hac-kim-co-dien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hắc Kim Cổ Điện
+            </span>
+            <span class="list-top-movie-item-en">
+             Misty Creed
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1801,84 +1867,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nam-than-bot-song" title="Nam Thần Bọt Sóng">
+          <a class="list-top-movie-link" href="/phim-moi/shining-modern-history" title="Shining Modern History">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-than-bot-song-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shining-modern-history-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nam Thần Bọt Sóng
+             Shining Modern History
             </span>
             <span class="list-top-movie-item-en">
-             Mermaid Prince
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mon-qua-bi-an" title="Món quà bí ẩn">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mon-qua-bi-an-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Món quà bí ẩn
-            </span>
-            <span class="list-top-movie-item-en">
-             Good Sam
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pete-davidson-turbo-fonzarelli" title="Pete Davidson: Turbo Fonzarelli">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pete-davidson-turbo-fonzarelli-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Pete Davidson: Turbo Fonzarelli
-            </span>
-            <span class="list-top-movie-item-en">
-             Pete Davidson: Turbo Fonzarelli
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/alex-rider-phan-3" title="Alex Rider (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/alex-rider-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Alex Rider (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Alex Rider (Season 3)
+             Shining of Modern History
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
